--- a/Resources/react-complete-guide/src/components/Card.css
+++ b/Resources/react-complete-guide/src/components/Card.css
@@ -8,8 +8,22 @@
     box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 } */
 
+.expense {
+  display: flex;
+  flex-direction: column;
+  width: 5.5rem;
+  height: 5.5rem;
+  border: 1px solid #ececec;
+  background-color: #2a2a2a;
+  color: white;
+  border-radius: 12px;
+  align-items: center;
+  justify-content: center;
+}
+
 .card {
   border-radius: 12px;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
-  /* background: red; */
+  background: black;
+
 }
