--- a/Resources/react-complete-guide/src/components/Card.css
+++ b/Resources/react-complete-guide/src/components/Card.css
@@ -1,17 +1,7 @@
-/* .expenses{
-    padding: 1rem;
-    background-color: rgb(31, 31, 31);
-    margin: 2rem auto;
-    width: 50rem;
-    max-width: 95%;
-    border-radius: 12px;
-    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
-} */
-
 .card {
   border-radius: 12px;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
-  background-color: #2a2a2a;
+  background-color:black;
   padding: 10px;
 
 }
