--- a/Resources/react-complete-guide/src/components/UI/Card.css
+++ b/Resources/react-complete-guide/src/components/UI/Card.css
@@ -1,7 +1,7 @@
 .card {
   border-radius: 12px;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
-  background-color:black;
+  /* background-color:black; */
   padding: 10px;
 }
 
@@ -10,4 +10,7 @@
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
   background-color:black;
   padding: 10px;
+}
+.notFound{
+  color:white;
 }
