--- a/starting-project/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/starting-project/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -22,3 +22,13 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+
+.form-control.invalid input {
+  border-color: red;
+  background-color: rgb(224, 101, 101);
+}
+.form-control.invalid label {
+  color: red;
+
+}
+
